--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -331,7 +331,7 @@ button {
     border-bottom: 1.3px solid #f4d961;
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-family: 'ubuntu_bold';
-    color: #ff5b35;
+    color: #007aff;
     font-size: 3.3em;
 }
 
@@ -1316,7 +1316,7 @@ input[type="radio"]:checked~.bullet .line.seven {
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-family: 'ubuntu_Bold';
     letter-spacing: 0.03em;
-    color: #ff5b35;
+    color: #007aff;
     font-size: 3.3em;
 }
 
